@@ -100,7 +100,6 @@
     <index>
       name Description
       criterion ATSimpleStringCriterion
-      criterion ATListCriterion
     </index>
     <index>
       name allowedRolesAndUsers
@@ -166,7 +165,6 @@
       description Text search of an item's contents
       enabled on
       criterion ATSimpleStringCriterion
-      criterion ATListCriterion
     </index>
     <index>
       name Subject
@@ -183,7 +181,6 @@
       description Text search of an item's title
       enabled on
       criterion ATSimpleStringCriterion
-      criterion ATListCriterion
     </index>
     <index>
       name Type
